--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "^3.3.3"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.0",
     "cookie-parser": "^1.4.6",
@@ -34,6 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.4",
     "mongoose-aggregate-paginate-v2": "^1.1.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.65.0"
   }
 }
